--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,23 +34,23 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core: ^1.17.0
-  cloud_firestore: ^3.1.15
-  firebase_auth: ^3.3.20
+  firebase_core: ^2.23.0
+  cloud_firestore: ^4.13.2
   shared_preferences: ^2.0.15
   qr_flutter: ^4.0.0
   qr_code_scanner: ^1.0.1
   device_preview: ^1.1.0
   flutter_vector_icons: ^2.0.0
-  firebase_core_platform_interface: 4.5.1
-  firebase_messaging: ^13.0.4
-  flutter_credit_card: ^3.0.4
+  firebase_core_platform_interface: ^5.0.0
+  firebase_messaging: ^14.7.5
+  flutter_credit_card: ^4.0.1
   provider: ^6.0.5
+  firebase_auth: ^4.14.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.9.3
+  flutter_launcher_icons: ^0.13.1
 flutter_icons:
   android: 'laucher_icon'
   ios: false
